feat: Configure Prison Secure application properties and nested class mappings
- Introduced `PrisonSecureProperties` class with nested configurations for Biometric and Security (JWT) settings.
- Added mappings for properties like biometric thresholds, JWT expiration times, secret keys, issuer, and audience.
- Updated property files (`application.yml`, `application-local.yml`, `application.properties`, and `application-jwt.yml`) with environment-specific overrides and defaults.
- Enhanced `.gitignore` to include local environment configuration files.

--- a/src/main/resources/application-jwt.yml
+++ b/src/main/resources/application-jwt.yml
@@ -1,4 +1,12 @@
-jwt:
-  secret: ${JWT_SECRET:prison-secure-secret-key-change-this-in-production-2025-very-long-secret}
-  expiration: 86400000 # 24 hours in milliseconds
-  prisoner-expiration: 28800000 # 8 hours in milliseconds for prisoners
+# ============================================
+# JWT Configuration
+# ============================================
+
+prison-secure:
+  security:
+    jwt:
+      secret: ${JWT_SECRET:dev-secret-key-change-in-production}
+      expiration: 86400000
+      prisoner-expiration: 28800000
+      issuer: prison-secure-system
+      audience: prison-secure-users
