--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,65 @@
+# ============================================
+# Prison Secure - Application Configuration
+# ============================================
+
+# Spring Application
 spring.application.name=prison-secure
+spring.profiles.active=local
+
+# ============================================
+# Database Configuration (DEFAULT - Override in profile)
+# ============================================
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=30000
+
+# JPA/Hibernate
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.validate-on-migrate=true
+
+# ============================================
+# Server Configuration
+# ============================================
+server.port=8080
+server.servlet.context-path=/
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
+server.error.include-exception=false
+
+# ============================================
+# Actuator & Management
+# ============================================
+management.endpoints.web.exposure.include=health,info,metrics
+management.endpoint.health.show-details=when-authorized
+
+# ============================================
+# Logging
+# ============================================
+logging.level.root=INFO
+logging.level.vn.gov.prison.secure=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# ============================================
+# Application Features
+# ============================================
+prison-secure.biometric.verification-threshold=0.95
+prison-secure.biometric.search-threshold=0.80
+
+# JWT (Cần override trong profile)
+prison-secure.security.jwt.expiration=86400000
+prison-secure.security.prisoner-jwt.expiration=28800000
